apps/k8s/frontend/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8s-test.stage.codedang.com # TODO: Replace this with stage.codedang.com
      secretName: frontend-tls
  rules:
    - host: k8s-test.stage.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5525
